@@ -49,11 +49,29 @@ First, make sure it's a new bug:
 If you're not sure, please ask on the Docutils-users_ mailing list
 first.
 
+---------------------------------------------------------------------
+
 If it's a new bug, the most important thing you can do is to write a
 simple description and a recipe that reproduces the bug.  Try to
-create a minimal document that demonstrates the bug.  The easier you
+create a `minimal example`_ that demonstrates the bug.  The easier you
 make it to understand and track down the bug, the more likely a fix
 will be.
+
+.. sidebar:: minimal example
+
+  .. _minimal example:
+
+  A minimal example is an example which is as small as possible. These
+  examples are much easier to understand than long examples.
+
+  To construct an example which is as small as possible, the rule is
+  quite simple: *remove anything which is not necessary*.
+
+  See also: `LaTeX FAQ`__, `Lilypond Documentation`__, minimalbeispiel.de__
+
+  __ http://www.tex.ac.uk/cgi-bin/texfaq2html?label=minxampl
+  __ http://lilypond.org/doc/v2.9/Documentation/user/lilypond/Minimal-examples
+  __ http://www.minimalbeispiel.de/mini-en.html
 
 Now you're ready to write the bug report.  Please include:
 
@@ -76,7 +94,8 @@ Now you're ready to write the bug report.  Please include:
 * A literal transcript of the *exact* command you ran, and the *exact*
   output.  Use the "--traceback" option to get a complete picture.
 
-* The exact input and output files.  Better to attach complete files
+* The exact input and output files.  Create a `minimal example`_
+  of the failing behaviour — it is better to attach complete files
   to your bug report than to include just a summary or excerpt.
 
 * If you also want to include speculation as to the cause, and even a
@@ -125,31 +144,6 @@ Also see the `SourceForge Bug Tracker`_.
   Calling rst2s5.py with a non-existent theme (``--theme
   does_not_exist``) or a non-existent language (``--language zz``)
   causes exceptions.  Such errors should be handled more gracefully.
-
-* There's a problem with _`hyperlink references in substitutions`::
-
-      |rst| is cool!
-
-      .. |rst| replace:: reStructuredText_
-
-      .. _reStructuredText: http://docutils.sourceforge.net/rst.html
-
-  There is a preferred alternative::
-
-     |rst|_ is cool!
-
-      .. |rst| replace:: reStructuredText
-      .. _rst: http://docutils.sourceforge.net/rst.html
-
-  This only works for the case where the entire substitution is a
-  reference, not when the reference is embedded as part of the
-  substitution.
-
-  The problem pattern has never been tested for, perhaps because of
-  the alternative.  Unit tests should be added.
-
-  This was not a bug in Docutils 0.3.7 (`reference
-  <http://thread.gmane.org/gmane.text.docutils.user/2997/focus=2997>`__).
 
 * The "stylesheet" setting (a URL, to be used verbatim) should be
   allowed to be combined with "embed_stylesheet".  The stylesheet data
